--- a/Week 1/W1-bio/Vargas bio page.html
+++ b/Week 1/W1-bio/Vargas bio page.html
@@ -9,14 +9,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A personal biography webpage about Gerson Vargas, including schooling and hobbies.">
-    <meta nam="author" content="Gerson Vargas">
+    <meta name="author" content="Gerson Vargas">
     <title>Gerson Vargas - About Me</title>
 </head>
 <body>
     <h1 id="header">Gerson Vargas - About Me</h1>
     
     <div id="nav">
-        <a href="#bio">Bio</a> |
+        <a href="#bio">Bi</a> |
         <a href="#schooling">Schooling</a> |
         <a href="#hobbies">Hobbies</a> |
         <a href="#footer">Footer</a>
@@ -48,7 +48,7 @@
     <h2 id="hobbies">Hobbies</h2>
     <p>Some of my favorite hobbies include:</p>
     <ul>
-        <li>Playing video games</em></li>
+        <li>Playing video games</li>
         <li>Playing basketball</li>
         <li>Hanging out with friends</li>
     </ul>
