--- a/Week 1/W1-bio/Vargas_bio.html
+++ b/Week 1/W1-bio/Vargas_bio.html
@@ -13,10 +13,10 @@
     <title>Gerson Vargas - About Me</title>
 </head>
 <body>
-    <h1 id="header">Gerson Vargas - About Me</h1>
+    <h1 id="header">Gerson Vargas - About M</h1>
     
     <div id="nav">
-        <a href="#bio">Bi</a> |
+        <a href="#bio">Bio</a> |
         <a href="#schooling">Schooling</a> |
         <a href="#hobbies">Hobbies</a> |
         <a href="#footer">Footer</a>
@@ -27,7 +27,7 @@
     <p>
         Hello! My name is <strong>Gerson Vargas</strong>. I am a student currently learning <em>web developing</em>. In my free time, I enjoy <b>playing basketball</b>, <b><i>video games</i></b>, and <b>hanging out with friends</b>. I also have 2 labrador retrievers!
     </p>
-    <img src="images\Nena & Koda.jpg" alt="Photo of profile" width="250">
+    <img src="../W1-bio/images/koda_nena.jpg" alt="Koda and Nena" width="250">
     <p>Koda & Nena</p>
 
     <hr>
@@ -52,7 +52,7 @@
         <li>Playing basketball</li>
         <li>Hanging out with friends</li>
     </ul>
-    <img src="images\JP Balling.jpg" alt="Example of a hobby" width="250">
+    <img src="../W1-bio/images/jp_balling.jpg" alt="Example of a hobby" width="250">
 
     <hr>
 
