--- a/Week 1/W1-bio/Vargas_bio.html
+++ b/Week 1/W1-bio/Vargas_bio.html
@@ -60,7 +60,7 @@
         <a href="#header">Back to Top</a>
         <br>
         <p>HTML Validation Screenshot:</p>
-        <img src="../W1-bio/images/Screenshot 2025-10-14 115521.png" alt="HTML Validation Screenshot" width="400">
+        <img src="../W1-bio/images/screenshot.png" alt="HTML Validation Screenshot" width="400">
     </div>
 
 </body>
